--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </ul>
   </footer>
 
-  <script src="js/main-mio.js"></script>
+  <script src="js/tarea-clase-7.js"></script>
   <script src="js/pruebas.js"></script>
 </body>
 
